--- a/Youtube_API/API_YOUTUBE_PYTHON.ipynb
+++ b/Youtube_API/API_YOUTUBE_PYTHON.ipynb
@@ -37,7 +37,7 @@
       "source": [
         "#Keys\n",
         "# How to get API Key for youtube : https://www.slickremix.com/docs/get-api-key-for-youtube/\n",
-        "API_KEY = \"AIzaSyA4tXkoZlGKwHMOgwoOPLlaaR3qygRAFW0\"\n",
+        "API_KEY = \"XXXX\"\n",
         "\n",
         "# How to get CHANNEL_ID for your youtube channel : https://support.google.com/youtube/answer/3250431?hl=en\n",
         "CHANNEL_ID = \"UC8EqL37DJOg_SYEjNoCVB3g\""
